tests/exceptions/ill-typed/bad-panic.saul
language core;



fn main(n : Nat) -> Nat {
  return (panic!)(panic!)  // unknown argument type!
}
